Adding Execution video

--- a/src/test/java/data/UserData.properties
+++ b/src/test/java/data/UserData.properties
@@ -1,6 +1,6 @@
 userRole=Admin
 userStatus=Enabled
-employeeName=sayed  ahmed
-userName=Ricky2
+employeeName=Joseph  Evans
+userName=Ricky5
 passWord=Ricky_123
 confirmPassword=Ricky_123
